fix: overflow stylings. disable body overflow when widget is open. modify defaults

--- a/src/components/Donations/Logo/logo.css
+++ b/src/components/Donations/Logo/logo.css
@@ -9,14 +9,14 @@
     top: 0;
     background: white;
 
-    margin: -1rem -2rem;
+    margin: -1rem -2rem 0 -2rem;
     padding: 1.5rem 2rem;
 }
 
 @media only screen and (max-width: 64em) {
     .logo {
-        margin: -1 -1.5rem;
-        padding: 1 1.5rem;
+        margin: -1rem -1.5rem 0 -1.5rem;
+        padding: 1.5rem 1.5rem;
     }
 }
 
